debug_log_phase1_step1_2.txt

💰 STANDALONE TOKEN BALANCE DIAGNOSTIC
==================================================
2025-07-18 15:17:41,903 - ERROR - ERROR: Standalone diagnostic failed: invalid syntax (arbitrum_testnet_agent.py, line 1341)
Traceback (most recent call last):
  File "/home/runner/workspace/standalone_balance_debug.py", line 27, in debug_token_balances
    from arbitrum_testnet_agent import ArbitrumTestnetAgent
  File "/home/runner/workspace/arbitrum_testnet_agent.py", line 1341
    ```python
    ^
SyntaxError: invalid syntax
❌ Diagnostic failed: invalid syntax (arbitrum_testnet_agent.py, line 1341)
